<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search_btn_text">Поиск</string>
    <string name="media_btn_text">Медиатека</string>
    <string name="options_btn_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="agreement_text">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_text">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="rec_email">lamand704@gmail.com</string>
    <string name="share_opt">Поделиться через</string>
    <string name="search_nothing">Ничего не нашлось</string>
    <string name="net_error2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="net_error">Проблемы со связью</string>
    <string name="refresh_btn_text">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="media_name">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="add_new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name">Название*</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_tracks">В плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="change_data">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
</resources>