<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.fragments.SettingsFragment"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/options_btn_text"
            style="@style/settings_theme_header"
            android:paddingStart="16dp"/>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            style="@style/settings_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theme_switch"
            android:theme="@style/day_night_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="6dp"/>

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/settings_theme" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/share_icon"
            style="@style/settings_btns" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            style="@style/settings_theme" />

        <ImageView
            android:id="@+id/support"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/support_icon"
            style="@style/settings_btns" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/agreementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_agreement"
            style="@style/settings_theme" />

        <ImageView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/arrow_forward_icon"
            style="@style/settings_btns" />

    </FrameLayout>
</LinearLayout>