<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/search"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".search.ui.fragments.SearchFragment"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/settings_theme_header"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/search_btn_text"
        android:textColorLink="@color/blue" />

</LinearLayout>
    <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_field"
            style="@style/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_high"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:drawableStart="@drawable/searchbar_icon"
            android:drawablePadding="@dimen/margin_half"
            android:hint="@string/search_btn_text"
            android:inputType="text"
            android:maxLength="255"
            android:paddingStart="@dimen/search_icon_padding"
            android:paddingEnd="@dimen/search_bar_text_merg"
            android:textCursorDrawable="@drawable/text_cursor_color" />

        <ImageView
            android:id="@+id/clear_icon"
            style="@style/search_clear_icon"
            android:visibility="gone" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="@dimen/pb_size"
            android:layout_height="@dimen/pb_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pb_top"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/no_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|top"
            android:paddingTop="102dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/no_results_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NoResultsImage" />

            <TextView
                style="@style/search_error"
                android:id="@+id/no_results_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_nothing" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/network_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|top"
            android:paddingTop="102dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/network_error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NetworkErrorImage" />

            <TextView
                style="@style/search_error"
                android:id="@+id/network_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_error" />
            <TextView
                style="@style/search_error"
                android:id="@+id/network_error_message2"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/error_text"
                android:layout_height="wrap_content"
                android:text="@string/net_error2"
                android:gravity="center"/>

            <Button
                style="@style/refresh_btn"
                android:id="@+id/refresh_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/refresh_btn"
                android:text="@string/refresh_btn_text" />
        </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|top"
            android:paddingTop="42dp"
            android:visibility="gone">

            <TextView
                style="@style/history"
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                style="@style/clear_history_btn"
                android:id="@+id/clear_history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/refresh_btn"
                android:text="@string/clear_history" />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>