<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/settings_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:src="@drawable/back_icon"
            app:tint="@color/yp_black"
            android:layout_marginTop="@dimen/bk_button_merg"
            android:layout_marginStart="@dimen/bk_button_merg"
            android:layout_marginBottom="@dimen/bk_button_merg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/options_btn_text"
            android:textColor="@color/yp_black"
            style="@style/menu_theme"
            android:paddingStart="12dp"/>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dark_theme"
            android:textColor="@color/yp_black"
            style="@style/settings_theme"
            android:paddingTop="@dimen/set_menutext_pad_top"
            android:paddingStart="@dimen/set_menutext_pad_startbottom"
            android:paddingBottom="@dimen/set_menutext_pad_startbottom"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share"
            android:textColor="@color/yp_black"
            style="@style/settings_theme"
            android:paddingTop="@dimen/set_menutext_pad_top"
            android:paddingStart="@dimen/set_menutext_pad_startbottom"
            android:paddingBottom="@dimen/set_menutext_pad_startbottom"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/share_icon"
            app:tint="@color/yp_gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/support"
            android:textColor="@color/yp_black"
            style="@style/settings_theme"
            android:paddingTop="@dimen/set_menutext_pad_top"
            android:paddingStart="@dimen/set_menutext_pad_startbottom"
            android:paddingBottom="@dimen/set_menutext_pad_startbottom"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/support_icon"
            app:tint="@color/yp_gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/license_agreement"
            android:textColor="@color/yp_black"
            style="@style/settings_theme"
            android:paddingTop="@dimen/set_menutext_pad_top"
            android:paddingStart="@dimen/set_menutext_pad_startbottom"
            android:paddingBottom="@dimen/set_menutext_pad_startbottom"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/set_icon_pad"
            app:srcCompat="@drawable/arrow_forward_icon"
            app:tint="@color/yp_gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
</LinearLayout>