<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.fragments.PlayerFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            style="@style/settings_btn_back_style"
            android:theme="@style/Theme.SettingsBtnBack"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            style="@style/player_title"
            app:layout_constraintEnd_toEndOf="@+id/albumCover"
            app:layout_constraintStart_toStartOf="@+id/albumCover"
            app:layout_constraintTop_toBottomOf="@id/albumCover" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            style="@style/player_artist"
            app:layout_constraintEnd_toEndOf="@+id/albumCover"
            app:layout_constraintStart_toStartOf="@+id/albumCover"
            app:layout_constraintTop_toBottomOf="@id/trackTitle" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.PlayerScreen_add_like"
            android:background="@drawable/bg_circle"
            android:src="@drawable/add_btn"
            app:layout_constraintBottom_toBottomOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="@+id/albumCover"
            app:layout_constraintTop_toTopOf="@+id/playButton" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/play_btn"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.PlayerScreen_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle"
            android:src="@drawable/heart_btn"
            app:layout_constraintBottom_toBottomOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="@+id/albumCover"
            app:layout_constraintTop_toTopOf="@+id/playButton" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/player_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/labelDuration"
            style="@style/player_info_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/duration"
            app:layout_constraintEnd_toStartOf="@id/valueDuration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer" />

        <TextView
            android:id="@+id/valueDuration"
            style="@style/player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/labelDuration"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelAlbum"
            style="@style/player_info_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/album"
            app:layout_constraintEnd_toStartOf="@id/valueAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelDuration" />

        <TextView
            android:id="@+id/valueAlbum"
            style="@style/player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/labelAlbum"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelYear"
            style="@style/player_info_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/year"
            app:layout_constraintEnd_toStartOf="@id/valueYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelAlbum" />

        <TextView
            android:id="@+id/valueYear"
            style="@style/player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/labelYear"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelGenre"
            style="@style/player_info_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/genre"
            app:layout_constraintEnd_toStartOf="@id/valueGenre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelYear" />

        <TextView
            android:id="@+id/valueGenre"
            style="@style/player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/labelGenre"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelCountry"
            style="@style/player_info_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/country"
            app:layout_constraintEnd_toStartOf="@id/valueCountry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelGenre" />

        <TextView
            android:id="@+id/valueCountry"
            style="@style/player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/labelCountry"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
        <View android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/playlists_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="505dp"
            android:orientation="vertical"
            app:behavior_hideable="true"
            android:background="@drawable/bg_bottom_sheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                        <View
                            android:layout_width="50dp"
                            android:layout_height="4dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/bottom_sheet_line"/>
                        <TextView
                            android:id="@+id/playlist_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/add_to_playlist"
                            android:textColor="@color/bottom_nav_text_inactive"
                            android:textSize="19sp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="28dp"/>
                        <Button
                            android:id="@+id/create_new_playlist_button"
                            style="@style/refresh_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:text="@string/new_playlist"
                            android:layout_marginBottom="24dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/playlist_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:id="@+id/playlist_no_results_image_pop"
                            style="@style/NoResultsImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="46dp"
                            android:visibility="gone"/>
                        <TextView
                            style="@style/search_error"
                            android:id="@+id/playlist_no_results_message_pop"
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:visibility="gone"
                            android:text="@string/empty_playlist" />

        </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

